# rubberband-web

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  build.sh  index.html  jest.config.cjs  offline-pitch-shift-processor.js  package.json  pitch-shift-realtime-processor.js  pitch-shift-source-processor.js  pitch-shift.worker.js  pnpm-lock.yaml  realtime-pitch-shift-processor.js  rubberband-processor.js  rubberband-source-processor.js  rubberband.worker.js  tsconfig.example.json  tsconfig.json  tsconfig.test.json  tsconfig.web.json  webpack.config.cjs  webpack.config.js
.github/workflows/: publish.yml
example/: index.html  package.json  script.js  script.js.map  script.ts  tsconfig.json  webpack.config.cjs
example-2/: index.html
example/src/: HeapArrayManager.ts  HeapManager.ts  hello.js  hello.wasm  index.html  index.ts  main.ts  program.wasm
example2/: package.json
example2/pages/: _app.tsx  index.tsx
public/: rubberband-processor.js
src/: HeapArray.ts  PitchShifter.cpp  PitchShifter.h  PitchShifter.ts  RubberbandNode.js  RubberbandNode.js.map  RubberbandNode.ts  demo.cpp  index.ts  main.cpp  rubberband-processor.ts  rubberband.cc  rubberband.wasmmodule.js
src/audioworklet/: PitchShifter.spec.ts  PitchShifter.ts  hello.js  hello.wasm  rubberband-processor.ts  rubberband.wasmmodule.js  test-processor.ts
src/cpp/: OfflineRubberBand.cpp  OfflineRubberBand.h  OfflineRubberBand_test.cpp  OfflineRubberband.cpp  OfflineRubberband.h  RealtimeRubberBand.h  RealtimeRubberband.cpp  RealtimeRubberband.h
src/wasm/: HeapArray.ts  HeapArrayManager.ts  HeapChannelManager.ts  rubberband.cc  test.cpp
src/web/: PitchShiftRealtimeNode.ts  PitchShiftSourceNode.ts  PitchShiftWorker.ts  RubberBandRealtimeNode.ts  RubberBandSourceNode.ts  RubberbandNode.ts  RubberbandWorker.ts  createPitchShiftRealtimeNode.ts  createPitchShiftSourceNode.ts  createPitchShiftWorker.ts  createRubberBandNode.ts  createRubberBandNodeForToneJS.ts  createRubberBandRealtimeNode.ts  createRubberBandSourceNode.ts  createRubberBandWorker.ts  index.ts  tsconfig.base.json  tsconfig.cjs.json  tsconfig.esm.json  tsconfig.esm5.json  tsconfig.types.json
src/worker/: pitch-shift.worker.ts  pitchShift.ts  processRubberBand.ts  rubberband.worker.ts
src/worklet/: HeapArray.ts  HeapArrayBuffer.spec.ts  HeapAudioBuffer.ts  HeapAudioBuffer2.ts  HeapFloat32Array.spec.ts  HeapFloat32Array.ts  OfflinePitchShift.ts  OfflineRubberBand.ts  PitchShiftSource.ts  PitchShifter.ts  RealtimePitchShift.ts  RealtimeRubberBand.spec.ts  RealtimeRubberBand.ts  RubberBandModule.ts  RubberBandPitchShiftSource.ts  RubberBandSource.ts  RubberBandSource2.ts  RubberBandSource3.ts  offline-pitch-shift-processor.ts  pitch-shift-realtime-processor.ts  pitch-shift-source-processor.ts  realtime-pitch-shift-processor.ts  rubberband-processor.ts  rubberband-source-processor.ts  rubberband-source-processor2.ts  tsconfig.json
wasm/: CMakeLists.txt  build.sh  rubberband.cc
wasm/lib/: .gitignore  setup.sh
wasm/src/: OfflineRubberBand.cpp  OfflineRubberBand.h  PitchShiftSource.h  RealtimeRubberBand.cpp  RealtimeRubberBand.h  RealtimeRubberband_test.cpp  RubberBandAPI.cpp  RubberBandAPI.h  RubberBandFinal.cpp  RubberBandFinal.h  RubberBandProcessor.cpp  RubberBandProcessor.h  RubberBandSource.cpp  RubberBandSource.h  main.cpp  rubberband.cc
wasm/src/rubberband/: OfflineRubberBand.cpp  RealtimeRubberBand.h  RealtimeRubberband_test.cpp  RubberBandAPI.cpp  RubberBandAPI.h  RubberBandFinal.cpp  RubberBandFinal.h  RubberBandProcessor.cpp  RubberBandProcessor.h  RubberBandSource.cpp  RubberBandSource.h
wasm/src/test/: Test.cpp  Test.h
